continued work on the slides. just the start

--- a/docs/slides/css/theme/minimal.css
+++ b/docs/slides/css/theme/minimal.css
@@ -112,6 +112,10 @@ text-shadow: none; }
   color: #fff !important;
 }
 
+.title-text {
+  font-weight: 400 !important;
+}
+
 .top-logo {
   position:fixed;
   top:-150px !important;
