--- a/docs/slides/css/theme/minimal.css
+++ b/docs/slides/css/theme/minimal.css
@@ -367,3 +367,17 @@ text-shadow: none; }
   left: 35%;
   bottom: 1em;
 }
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 0;
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
